Preview group screen from admin interface

--- a/app/views/group.html
+++ b/app/views/group.html
@@ -50,6 +50,11 @@
         <span class="glyphicon glyphicon-plus"></span>
         Add a new dashboard
       </button>
+      <button class="btn btn-sm"
+              ng-click="previewGroup()">
+        <span class="glyphicon glyphicon-screenshot"></span>
+        Preview
+      </button>
     </div>
   </div>
 </div>
