--- a/app/views/groups.html
+++ b/app/views/groups.html
@@ -12,3 +12,13 @@
     </button>
   </li>
 </ul>
+<div data-ui-element="dk-preview">
+  <div class="preview-container">
+    <div class="panel panel-default preview-panel">
+      <div class="panel-heading">
+        <div class="name">Preview</div>
+      </div>
+      <iframe width="640" height="360" class="preview-iframe" title="Preview" src="{{ host }}"></iframe>
+    </div>
+  </div>
+</div>
