--- a/app/styles/admin/groups.less
+++ b/app/styles/admin/groups.less
@@ -15,3 +15,19 @@
 
     .clearfix();
 }
+
+[data-ui-element=dk-preview] {
+    .preview-container {
+        width: 640px;
+        margin: 0px auto;
+    }
+    
+    .preview-panel {
+        margin-top: 20px;
+        border: none;
+    }
+    
+    .preview-iframe {
+        border: none;
+    }
+}
