Make the preview responsive

--- a/app/styles/admin/groups.less
+++ b/app/styles/admin/groups.less
@@ -18,13 +18,14 @@
 
 [data-ui-element=dk-preview] {
     .preview-container {
-        width: 640px;
         margin: 0px auto;
     }
     
     .preview-panel {
         margin-top: 20px;
+        margin-bottom: 0px;
         border: none;
+        border-radius: 5px 5px 0px 0px;
     }
     
     .preview-iframe {
