--- a/app/views/groups.html
+++ b/app/views/groups.html
@@ -14,11 +14,11 @@
 </ul>
 <div data-ui-element="dk-preview">
   <div class="preview-container">
-    <div class="panel panel-default preview-panel">
-      <div class="panel-heading">
-        <div class="name">Preview</div>
-      </div>
-      <iframe width="640" height="360" class="preview-iframe" title="Preview" src="{{ host }}"></iframe>
+    <div class="panel panel-heading preview-panel">
+      <div class="name">Preview</div>
     </div>
+    <div class="embed-responsive embed-responsive-16by9">
+      <iframe class="preview-iframe embed-responsive-item" title="Preview" src="{{ host }}"></iframe>
+    </div>  
   </div>
 </div>
