removed http error

--- a/app/styles/admin/groups.less
+++ b/app/styles/admin/groups.less
@@ -32,3 +32,16 @@
         border: none;
     }
 }
+
+[data-ui-element=dk-broadcast] {
+    text-align: right;
+    .broadcast-button {
+        margin-bottom: 1%;
+        margin-right: 1%;
+    }
+}
+
+.checkbox-container {
+    border: none !important;
+    padding: 0px !important;
+}
