--- a/app/views/dashboard.edit.html
+++ b/app/views/dashboard.edit.html
@@ -3,7 +3,7 @@
     <div class="modal-content" ng-controller="EditDashboardCtrl">
       <form novalidate name="dashboardForm" class="form" role="form" ng-submit="submit()">
         <div class="modal-body">
-          <div class="input-group" ng-class="{'has-error': dashboardForm.url.$invalid}"">
+          <div class="input-group" ng-class="{'has-error': dashboardForm.url.$invalid}">
             <span class="input-group-addon"><span title="URL" class="glyphicon glyphicon-link"></span></span>
             <input type="url" class="form-control"
                    placeholder="URL" name="url" required
@@ -17,20 +17,22 @@
           </div>
           <div class="row">
             <div class="col-md-6">
-              <div class="input-group">
+              <div class="input-group" ng-class="{'has-error': dashboardForm.timeout.$invalid}">
                 <span class="input-group-addon"><span title="Timeout" class="glyphicon glyphicon-refresh"></span></span>
                 <input type="number" class="form-control"
                        placeholder="Timeout" name="timeout"
-                       ng-model="dashboard.timeout">
+                       ng-model="dashboard.timeout" 
+                       pattern="^[0-9]*$">
                 <span class="input-group-addon">s</span>
               </div>
             </div>
             <div class="col-md-6">
-              <div class="input-group">
+              <div class="input-group" ng-class="{'has-error': dashboardForm.delay.$invalid}">
                 <span class="input-group-addon"><span title="Delay" class="glyphicon glyphicon-time"></span></span>
                 <input type="number" class="form-control"
                        placeholder="Delay" name="delay"
-                       ng-model="dashboard.delay">
+                       ng-model="dashboard.delay"
+                       pattern="^[0-9]*$">
                 <span class="input-group-addon">s</span>
               </div>
             </div>
