added design and links in navbar

--- a/app/styles/admin.less
+++ b/app/styles/admin.less
@@ -27,7 +27,7 @@ body {
 
 .container {
     @media (min-width: @screen-phone) {
-        margin-top: 10px;
+        margin-top: @navbar-height + 15px;
         margin-bottom: 10px;
         border: @gray-light 1px solid;
     }
