Fix CSS issue in admin Header

--- a/app/styles/admin/header.less
+++ b/app/styles/admin/header.less
@@ -78,20 +78,16 @@ header {
     }
     
     .links {
-        height:100% !important;
-        display:inline-block;
-        vertical-align: middle;
+        display: block;
+        height: 100% !important;
+        margin: 0px;
         transition: all 0.5s;
+        padding: 0px 10px;
     }
     
     .animation:hover{
-        letter-spacing: 2px;
-    }
-
-    .divider {
-        display: inline;
-        margin: 5px 30px 5px 15px;
-        border-left: 2px solid  rgb(255, 255, 255);
+        background-color: rgb(40, 40, 40);
+        background-color: fade(rgb(40, 40, 40), 50%);
     }
 
     .inner-link {
