--- a/app/styles/admin/groups.less
+++ b/app/styles/admin/groups.less
@@ -41,7 +41,21 @@
     }
 }
 
+.check-uncheck-container {
+    margin-bottom: 15px;
+}
+
 .checkbox-container {
+    margin-top: 10px !important;
     border: none !important;
     padding: 0px !important;
+}
+
+.final-dropzone {
+    &.droppable {
+        color: darkgrey;
+        border: 3px dotted darkgrey;
+        text-align: center;
+        user-select: none; 
+    }
 }
