--- a/app/styles/admin/header.less
+++ b/app/styles/admin/header.less
@@ -12,8 +12,8 @@ header {
 
     vertical-align: middle;
     .logo, .branding {
-        margin-top:-10px;
-        height: @navbar-height;
+        display: inline-block;
+        height: @navbar-height - 10px;
         width: auto;
         margin-left: 13px;
     }
