--- a/app/views/groups.html
+++ b/app/views/groups.html
@@ -1,24 +1,28 @@
 <div data-ui-element="dk-broadcast">
-  <span class="property edit"
-    bs-modal
-    data-container="body"
-    data-template="broadcast.create.html">
+  <span class="property edit" bs-modal data-container="body" data-template="broadcast.create.html">
     <button type="button" class="btn btn-default broadcast-button" ng-click="createBroadcast()">
-        <span class="glyphicon glyphicon-globe"></span>
-        Broadcast
+      <span class="glyphicon glyphicon-globe"></span>
+      Broadcast
     </button>
   </span>
 </div>
 
 <ul data-ui-element="dk-group-list">
-  <li ng-repeat="group in groups track by group.id" class="col-md-6">
+  <div ng-repeat="group in groups track by group.id" class="col-md-6">
     <dk-group group="group" groups="groups">
     </dk-group>
+  </div>
+  <div class="col-md-6">
+    <div dk-droppable="{'text/vnd.dashkiosk.group': moveGroupToEnd}" class="final-dropzone" group="-1"
+      groups="groups">
+      <div class="panel-body"></div>
+    </div>
+  </div>
+  </div>
+
   </li>
   <li class="col-md-2">
-    <button type="button"
-            class="btn btn-default btn-lg"
-            ng-click="createGroup()">
+    <button type="button" class="btn btn-default btn-lg" ng-click="createGroup()">
       <span class="glyphicon glyphicon-plus"></span>
       Add a new group
     </button>
@@ -31,6 +35,6 @@
     </div>
     <div class="embed-responsive embed-responsive-16by9">
       <iframe class="preview-iframe embed-responsive-item" title="Preview" src="{{ host }}"></iframe>
-    </div>  
+    </div>
   </div>
 </div>
