--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,6 +1,10 @@
-.fullwindow {
-    height: 100%;
-    width: 100%;
+.centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
 }
 
 .btn:focus, .btn:active {
