--- a/front/src/App.css
+++ b/front/src/App.css
@@ -44,19 +44,19 @@ a {
 }
 
 
-.animate-enter {
+.fade-enter {
     opacity: 0;
 }
-.animate-enter-active {
+.fade-enter-active {
     opacity: 1;
-    transition: opacity 200ms;
+    transition: opacity 500ms ease-in;
 }
-.animate-exit {
+.fade-exit {
     opacity: 1;
 }
-.animate-exit-active {
+.fade-exit-active {
     opacity: 0;
-    transition: opacity 200ms;
+    transition: opacity 300ms ease-in;
 }
 
 ul.list-layout {
