Added osd style

--- a/front/src/App.css
+++ b/front/src/App.css
@@ -115,3 +115,19 @@ li.list-layout-item {
 .osd > .size > span {
     display: block;
 }
+
+.hide {
+    opacity: 0;
+    -webkit-transition: opacity 1s;
+    -moz-transition: opacity 1s;
+    -o-transition: opacity 1s;
+    transition: opacity 1s;
+}
+
+.disp {
+    opacity: 1;
+    -webkit-transition: opacity 1s;
+    -moz-transition: opacity 1s;
+    -o-transition: opacity 1s;
+    transition: opacity 1s;
+}
