--- a/front/src/Components/Dashboard/Dashboard.css
+++ b/front/src/Components/Dashboard/Dashboard.css
@@ -5,6 +5,6 @@
 .list-group-item.active.light-blue {
     z-index:2;
     color:#ffffff;
-    background-color:#1793b8;
-    border-color:#1793b8;
+    background-color:#00BFFF;
+    border-color:#00BFFF;
 }
