--- a/front/src/Components/Receiver/Receiver.css
+++ b/front/src/Components/Receiver/Receiver.css
@@ -1,4 +1,5 @@
 .clock {
+    margin-right: 2%;
     font-size: 80px;
     text-shadow: 2px 0px #343a40, -2px 0px #343a40, 0px 2px #343a40, 0px -2px #343a40;
     color: #f7f7f7;
