--- a/front/src/Components/SideMenu/SideMenu.css
+++ b/front/src/Components/SideMenu/SideMenu.css
@@ -2,7 +2,8 @@
     position: fixed;
     top: 0px;
     left: 0px;
-    width: 20%;
+    min-width: 180px;
+    width: 15%;
     height: 100%;
     transform: translateX(-100%);
     transition: transform .4s ease-out;
@@ -26,4 +27,44 @@
     -webkit-transform: rotate(0deg);
     -ms-transform: rotate(0deg);
     transform: rotate(0deg);
+}
+
+.p-relative {
+    position: relative;
+}
+
+.absolute-left {
+    height: 40px !important;
+    position: absolute;
+    left: 0px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.absolute-right {
+    height: 40px !important;
+    position: absolute;
+    right: 0px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.absolute-center {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.sidem-dd-arrow {
+    margin-right: 10px;
+    position: absolute;
+    right: 0px;
+    top: 50%;
+    transform: translateY(-50%) rotate(-90deg);
+    transition: transform .4s ease-in-out;
+}
+
+.sidem-dd-arrow.active {
+    transform: translateY(-50%) rotate(90deg);
 }
