--- a/front/src/Components/Admin/Admin.css
+++ b/front/src/Components/Admin/Admin.css
@@ -3,8 +3,8 @@
 }
 
 .handle-side-menu {
-    padding-left: 0% !important;
-    transition: padding-left .4s ease-out;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 .handle-side-menu.handle-side-menu-active {
