--- a/front/src/Components/SideMenu/SideMenu.css
+++ b/front/src/Components/SideMenu/SideMenu.css
@@ -1,59 +1,39 @@
-.side-menu {
+.sb {
     position: fixed;
+    overflow: hidden;
     top: 0px;
     left: 0px;
-    min-width: 180px;
-    width: 15%;
     height: 100%;
     transform: translateX(-100%);
-    z-index: 1100;
     will-change: transform;
+    z-index: 1100;
 }
 
-.side-menu-btn {
-    -webkit-transform: rotate(180deg);
-    -ms-transform: rotate(180deg);
+.sb-arrow-btn {
+    float: right;
+    font-size: 30px !important;
+}
+
+.sb-arrow-icon {
     transform: rotate(180deg);
-    -webkit-transition: -webkit-transform .4s ease-in-out .2s;
-    -ms-transition: -ms-transform .4s ease-in-out .2s;
     transition: transform .4s ease-in-out .2s;
 }
 
-.side-menu-btn.side-menu-btn-active {
-    -webkit-transform: rotate(0deg);
-    -ms-transform: rotate(0deg);
+.sb-arrow-icon.active {
     transform: rotate(0deg);
 }
 
-.p-relative {
-    position: relative;
+.sb-container-layoutsize {
+    height: 40px;
+    width: 120px;
+    box-shadow: 0px 0px 3px black inset;
 }
 
-.absolute-left {
-    height: 40px !important;
-    position: absolute;
-    left: 0px;
-    top: 50%;
-    transform: translateY(-50%);
+.sb-container-layoutsize .btn {
+    height: 40px;
 }
 
-.absolute-right {
-    height: 40px !important;
-    position: absolute;
-    right: 0px;
-    top: 50%;
-    transform: translateY(-50%);
-}
-
-.absolute-center {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.sidem-dd-arrow {
-    margin-right: 10px;
+.sb-layoutsize-arrow {
     position: absolute;
     right: 0px;
     top: 50%;
@@ -61,6 +41,6 @@
     transition: transform .4s ease-in-out;
 }
 
-.sidem-dd-arrow.active {
+.sb-layoutsize-arrow.active {
     transform: translateY(-50%) rotate(90deg);
 }
