--- a/templates/4Grid/template.pug
+++ b/templates/4Grid/template.pug
@@ -5,7 +5,7 @@ html
             padding: '0px',
             margin: '0px'
         })
-        iframe(width="50%", height="50%", frameborder=0, src=url[0])
-        iframe(width="50%", height="50%", frameborder=0, src=url[1])
-        iframe(width="50%", height="50%", frameborder=0, src=url[2])
-        iframe(width="50%", height="50%", frameborder=0, src=url[3])
+        iframe(width="50%", height="50%", frameborder=0, scrolling="no", src=url[0], style={'overflow-y': 'hidden'})
+        iframe(width="50%", height="50%", frameborder=0, scrolling="no", src=url[1], style={'overflow-y': 'hidden'})
+        iframe(width="50%", height="50%", frameborder=0, scrolling="no", src=url[2], style={'overflow-y': 'hidden'})
+        iframe(width="50%", height="50%", frameborder=0, scrolling="no", src=url[3], style={'overflow-y': 'hidden'})
