--- a/front/src/Components/SideMenu/SideMenu.css
+++ b/front/src/Components/SideMenu/SideMenu.css
@@ -4,6 +4,7 @@
     top: 0px;
     left: 0px;
     height: 100%;
+    width: 250px;
     transform: translateX(-100%);
     will-change: transform;
     z-index: 1100;
@@ -26,14 +27,21 @@
 .sb-container-layoutsize {
     height: 40px;
     width: 120px;
-    box-shadow: 0px 0px 3px black inset;
+    box-shadow: 0px 0px 2px black inset;
 }
 
 .sb-container-layoutsize .btn {
     height: 40px;
 }
 
-.sb-layoutsize-arrow {
+.sb-container-grouptags {
+    padding-top: 5px;
+    box-shadow: 0px 0px 2px black inset;
+}
+
+.sb-collapse-arrow {
+    width: 20px;
+    height: 20px;
     position: absolute;
     right: 0px;
     top: 50%;
@@ -41,6 +49,6 @@
     transition: transform .4s ease-in-out;
 }
 
-.sb-layoutsize-arrow.active {
+.sb-collapse-arrow.active {
     transform: translateY(-50%) rotate(90deg);
 }
