--- a/front/src/Components/Receiver/Receiver.css
+++ b/front/src/Components/Receiver/Receiver.css
@@ -83,6 +83,8 @@
 
 .logo {
     position: absolute;
+    height: 50%;
+    width: auto;
     top: 50%;
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
