--- a/front/src/Components/Admin/Admin.css
+++ b/front/src/Components/Admin/Admin.css
@@ -3,8 +3,7 @@
 }
 
 .handle-side-menu {
-    padding-left: 5px;
-    padding-right: 5px;
+    padding-right: 5px !important;
     transform-origin: top right;
-    will-change: transform;
+    will-change: padding-left;
 }
