--- a/front/src/Components/Receiver/Receiver.css
+++ b/front/src/Components/Receiver/Receiver.css
@@ -91,3 +91,46 @@
     -ms-transform: translate(-50%, -50%);
     transform:translate(-50%, -50%)
 }
+
+.watermark-center {
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform:translate(-50%, -50%)
+}
+
+.watermark-bottomright {
+    top: 100%;
+    left: 100%;
+    -webkit-transform: translate(-100%, -100%);
+    -ms-transform: translate(-100%, -100%);
+    transform:translate(-100%, -100%);
+}
+
+.watermark-bottomleft {
+    top: 100%;
+    left: 0%;
+    -webkit-transform: translate(0%, -100%);
+    -ms-transform: translate(0%, -100%);
+    transform:translate(0%, -100%);
+}
+
+.watermark-topright {
+    top: 0%;
+    left: 100%;
+    -webkit-transform: translate(-100%, 0%);
+    -ms-transform: translate(-100%, 0%);
+    transform:translate(-100%, 0%);
+}
+
+.watermark-topleft {
+    top: 0%;
+    left: 0%;
+}
+
+.watermark {
+    height: 15%;
+    width: auto;
+    position: absolute;
+}
