Change tag's text color depending on tag background color

--- a/front/src/CSS/Border.css
+++ b/front/src/CSS/Border.css
@@ -2,6 +2,10 @@
     border-color: gray;
 }
 
+.border-black {
+    border-color: black;
+}
+
 .rounded-top-left {
     border-radius: .25rem 0rem 0rem 0rem !important;
 }
