--- a/front/src/Components/uploadImage/uploadImage.css
+++ b/front/src/Components/uploadImage/uploadImage.css
@@ -23,7 +23,7 @@
     z-index: 2000 !important;
 }
 
-.savedDashboardBody {
+.savedImageBody {
     max-height: 50vh;
     overflow-y: auto;
 }
@@ -37,4 +37,19 @@
     background-color: #E9ECEF !important;
     color: #495057 !important;
     border-color: #ced4da !important;
+}
+
+.upload-image {
+    border-top-right-radius: 0.3em;
+    border-bottom-right-radius: 0.3em;
+    border-width: 1px;
+    border-color: #ced4da;
+    border-style: solid;
+    background-color: #E9ECEF;
+    min-width: 80px;
+    color: #495057;
+    border-radius: 0.3em;
+    width:50%;
+    text-align: center;
+    cursor: pointer;
 }
